# foofit

./: .gitignore  README.md  benchmark.py  example.ipynb  foofit_manual.tex  foofit_package.py  pyproject.toml  setup.py  xrr_fitting_v71.ipynb
foofit/: __init__.py  foofit.py  si_ps.xrr
